@@ -320,6 +320,9 @@ define('_AM_WGGALLERY_MAINTENANCE_INVALIDRATE', 'Cleaning ratings/likes');
 define('_AM_WGGALLERY_MAINTENANCE_INVALIDRATE_DESC', 'Delete ratings/likes, where the image is not existing anymore');
 define('_AM_WGGALLERY_MAINTENANCE_INVALIDRATE_NUM', '%e of %s ratings are invalid');
 define('_AM_WGGALLERY_MAINTENANCE_INVALIDRATE_RESULT', '%s of %t ratings cleaned');
+define('_AM_WGGALLERY_MAINTENANCE_INVALIDCATS', 'Cleaning used categories');
+define('_AM_WGGALLERY_MAINTENANCE_INVALIDCATS_DESC', 'Delete category in albums and images, if category is not existing anymore');
+define('_AM_WGGALLERY_MAINTENANCE_INVALIDCATS_RESULT', '%t items have been cleaned');
 // Albums
 define('_AM_WGGALLERY_ALBUMS_ERRNOTFOUND', 'Error: Image not found (Image-Id %s)');
 // Import
