@@ -6,6 +6,8 @@
  - added cleaning invalid ratings in maintenance (goffy)
  - added default exif lens make and lens model (lupin/goffy)
  - fixed bug in fineimageuploader (goffy)
+ - fixed bug in saving album cats (goffy)
+ - added cleaning invalid cats in maintenance (goffy)
 
 <h5>1.13 RC1</h5>  [2019/../..]
 <hr>
